[workspace]
members = [
    "btls",
    "btls-sys",
    "tokio-btls",
]
resolver = "2"

[workspace.package]
version = "0.5.0-alpha.1"
repository = "https://github.com/0x676e67/btls"
edition = "2021"
rust-version = "1.85"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
btls-sys = { package = "btls-sys", version = "0.5.0-alpha.1", path = "./btls-sys" }
btls = { package = "btls", version = "0.5.0-alpha.1", path = "./btls" }
tokio-btls = { package = "tokio-btls", version = "0.5.0-alpha.1", path = "./tokio-btls" }

bindgen = { version = "0.72.0", default-features = false, features = ["runtime"] }
bitflags = "2.9"
brotli = "8.0"
bytes = "1"
cmake = "0.1.57"
fs_extra = "1.3.0"
fslock = "0.2"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
rusty-hook = "^0.11"
futures = "0.3"
tokio = "1"
anyhow = "1"
antidote = "1.0.0"
linked_hash_set = "0.1"
openssl-macros = "0.1.1"
autocfg = "1.3.0"
